@@ -110,7 +110,7 @@ install_requires = [
     'honcho>=0.7.0,<0.8.0',
     'kombu==3.0.35',
     'ipaddress>=1.0.16,<1.1.0',
-    'libsourcemap>=0.7.2,<0.8.0',
+    'libsourcemap>=0.8.2,<0.9.0',
     'loremipsum>=1.0.5,<1.1.0',
     'lxml>=3.4.1',
     'mock>=0.8.0,<1.1',
